Update [file-name] with latest changes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/style.css" >
-    <link rel="icon" sizes="180x180" href="../Photo/Tab_logo.png">
+    <link rel="stylesheet" href="CSS/style.css" >
+    <link rel="icon" sizes="180x180" href="./Photo/Tab_logo.png">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <title>Coffee Bean Bontique</title>
@@ -17,7 +17,7 @@
     <header>
       <section>
         <div >
-          <img src="../Photo/logo-n.png" alt="Coffee Bean Logo" >
+          <img src="./Photo/logo-n.png" alt="Coffee Bean Logo" >
           <span>Bean Boutique</span>
         </div>
 
@@ -32,15 +32,15 @@
         <nav class="nav-menu" id="navMenu">
           <ul>
             <li><a href="index.html" class="active" aria-current="page">Home</a></li>
-            <li><a href="coffee_section.html">Coffee</a></li>
-            <li><a href="brewng_equipment.html">Equipments</a></li>
-            <li><a href="special_offer.html">Special Offer</a></li>
-            <li><a href="event.html">Events</a></li>
+            <li><a href="./HTML/coffee_section.html">Coffee</a></li>
+            <li><a href="./HTML/brewng_equipment.html">Equipments</a></li>
+            <li><a href="./HTML/special_offer.html">Special Offer</a></li>
+            <li><a href="./HTML/event.html">Events</a></li>
           </ul>
         </nav>
 
         <div class="cart-icon">
-          <a href="cart.html">
+          <a href="./HTML/cart.html">
             <i class="fa-solid fa-basket-shopping" aria-label="cart"></i>
             <span class="cart-count">0</span>
           </a>  
@@ -50,7 +50,7 @@
         <i class="fa-solid fa-xmark close-btn"  id="popupCloseBtn"></i>
         <div class="popup-header">
           <div class="logo">
-            <img src="../Photo/logo-n.png" alt="Coffee Logo" >
+            <img src="./Photo/logo-n.png" alt="Coffee Logo" >
             <span>Bean Boutique</span>
           </div>
           <div class="discount-badge">
@@ -158,7 +158,7 @@
           <div class="gallery-item main-feature">
             <div class="image-container">
               <img
-                src="../Photo/Home/Coffee_Conversations.jpg"
+                src="./Photo/Home/Coffee_Conversations.jpg"
                 alt="Friends enjoying coffee together"
               >
               <div class="image-overlay">
@@ -173,7 +173,7 @@
           <div class="gallery-item">
             <div class="image-container">
               <img
-                src="../Photo/Home/Work&Coffee.jpg"
+                src="./Photo/Home/Work&Coffee.jpg"
                 alt="Person working with coffee"
               >
               <div class="image-overlay">
@@ -188,7 +188,7 @@
           <div class="gallery-item">
             <div class="image-container">
               <img
-                src="../Photo/Home/Coffee_Dates.webp"
+                src="./Photo/Home/Coffee_Dates.webp"
                 alt="Couple enjoying coffee date"
               >
               <div class="image-overlay">
@@ -204,7 +204,7 @@
           <div class="gallery-item">
             <div class="image-container">
               <img
-                src="../Photo/Home/business.jpg"
+                src="./Photo/Home/business.jpg"
                 alt="Business meeting over coffee"
               >
               <div class="image-overlay">
@@ -219,7 +219,7 @@
           <div class="gallery-item">
             <div class="image-container">
               <img
-                src="../Photo/Home/Welcoming_Atmosphere.jpg"
+                src="./Photo/Home/Welcoming_Atmosphere.jpg"
                 alt="Solo coffee moment"
               >
               <div class="image-overlay">
@@ -258,7 +258,7 @@
         <h2>Why Choose Us?</h2>
         <div class="features">
           <div class="feature-box">
-            <img src="../Photo/Home/sustainably.png" alt="Sustainably Sourced">
+            <img src="./Photo/Home/sustainably.png" alt="Sustainably Sourced">
             <h3>Sustainably Sourced</h3>
             <p>
               We partner with farmers who use ethical, sustainable farming
@@ -267,7 +267,7 @@
           </div>
 
           <div class="feature-box">
-            <img src="../Photo/Home/cof_bean.png" alt="Freshly Roasted">
+            <img src="./Photo/Home/cof_bean.png" alt="Freshly Roasted">
             <h3>Freshly Roasted</h3>
             <p>
               Our beans are roasted in small batches to ensure maximum freshness
@@ -276,7 +276,7 @@
           </div>
 
           <div class="feature-box">
-            <img src="../Photo/Home/cof_bag.png" alt="Expertly Crafted">
+            <img src="./Photo/Home/cof_bag.png" alt="Expertly Crafted">
             <h3>Expertly Crafted</h3>
             <p>
               Each blend is designed to highlight the best qualities of the
@@ -295,7 +295,7 @@
       <div class="products-grid">
         <div class="product-card">
           <span class="discount">Popular</span>
-          <img src="../Photo/Home/cappuccino.jpg" alt="Cappuccino" >
+          <img src="./Photo/Home/cappuccino.jpg" alt="Cappuccino" >
           <h3>Cappuccino</h3>
           <p class="product-description">
             A cappuccino is a popular Italian coffee drink made with espresso,
@@ -319,7 +319,7 @@
 
         <div class="product-card">
           <span class="discount">Best Seller</span>
-          <img src="../Photo/Home/Espresso.jpg" alt="Espresso" >
+          <img src="./Photo/Home/Espresso.jpg" alt="Espresso" >
           <h3>Espresso</h3>
           <p class="product-description">
             a concentrated coffee beverage brewed by forcing hot water through
@@ -343,7 +343,7 @@
 
         <div class="product-card">
           <!-- <span class="discount"></span> -->
-          <img src="../Photo/Home/Latte.jpg" alt="Latte " >
+          <img src="./Photo/Home/Latte.jpg" alt="Latte " >
           <h3>Latte</h3>
           <p class="product-description">
             a coffee drink made with espresso and steamed milk, typically topped
@@ -376,7 +376,7 @@
       <div class="products-grid">
         <div class="product-card">
           <span class="discount">Best Seller</span>
-          <img src="../Photo/Home/coffee_maker.jpg" alt="Coffee Maker" >
+          <img src="./Photo/Home/coffee_maker.jpg" alt="Coffee Maker" >
           <h3>Coffee Maker</h3>
           <p class="product-description">
             Brew rich, flavorful coffee effortlessly with our premium coffee
@@ -390,7 +390,7 @@
 
         <div class="product-card">
           <span class="discount">New</span>
-          <img src="../Photo/Home/premium_bean.jpg" alt="Coffee Beans" >
+          <img src="./Photo/Home/premium_bean.jpg" alt="Coffee Beans" >
           <h3>Premium Coffee Beans</h3>
           <p class="product-description">
             Sourced from top-tier farms, our premium coffee beans offer a rich,
@@ -403,7 +403,7 @@
 
         <div class="product-card">
           <span class="discount">Recent</span>
-          <img src="../Photo/Home/coffee_grinder.jpg" alt="Coffee Grinder" >
+          <img src="./Photo/Home/coffee_grinder.jpg" alt="Coffee Grinder" >
           <h3>Manual Burr Grinders</h3>
           <p class="product-description">
             deliver precise, consistent grinding with a hands-on approach,
@@ -424,7 +424,7 @@
             <h3>Recent Feedbacks</h3>
             <div class="feedback-card">
               <img
-                src="../Photo/Home/review_1.jpg"
+                src="./Photo/Home/review_1.jpg"
                 alt="Robert"
               >
               <div>
@@ -439,7 +439,7 @@
             </div>
             <div class="feedback-card">
               <img
-                src="../Photo/Home/review_3.jpg"
+                src="./Photo/Home/review_3.jpg"
                 alt="Emma"
               >
               <div>
@@ -454,7 +454,7 @@
             </div>
             <div class="feedback-card">
               <img
-                src="../Photo/Home/man_2.jpg"
+                src="./Photo/Home/man_2.jpg"
                 alt="John"
               >
               <div>
@@ -573,7 +573,7 @@
       </div>
       <div class="chatbot-messages" id="chatbotMessages" role="log"></div>
       <form class="chatbot-input-area" id="chatbotForm">
-        <input type="text" id="chatbotInput" placeholder="Ask about coffee, offers, hours..." autocomplete="off" aria-label="Message" required >
+        <input type="text" id="chatbotInput" placeholder="Ask about coffee, offers, hours.." autocomplete="off" aria-label="Message" required >
         <button type="submit" class="chatbot-send" aria-label="Send"><i class="fa-solid fa-paper-plane"></i></button>
       </form>
     </div>
@@ -590,7 +590,7 @@
       <div class="footer-content">
         <div class="footer-section">
           <div class="footer-logo">
-            <img src="../Photo/logo-n.png" alt="Bean Boutique Logo" >
+            <img src="./Photo/logo-n.png" alt="Bean Boutique Logo" >
             <span>Bean Boutique</span>
           </div>
           <p class="footer-description">
@@ -707,8 +707,8 @@
       </div>
     </footer>
 
-    <script src="../JS/script.js"></script>
-    <script src="../JS/home.js"></script>
+    <script src="./JS/script.js"></script>
+    <script src="./JS/home.js"></script>
 
   </body>
 </html>
