--- a/HTML/event.html
+++ b/HTML/event.html
@@ -31,7 +31,7 @@
             <!-- Navigation Menu -->
             <nav class="nav-menu" id="navMenu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="coffee_section.html">Coffee</a></li>
                     <li><a href="brewng_equipment.html">Equipments</a></li>
                     <li><a href="special_offer.html">Special Offer</a></li>
