--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -146,7 +146,7 @@
           <h4>Quick Links</h4>
           <ul>
             <li>
-              <a href="homepage.html"><i class="fa-solid fa-home"></i>Home</a>
+              <a href="../index.html"><i class="fa-solid fa-home"></i>Home</a>
             </li>
             <li>
               <a href="coffee_section.html"
