--- a/HTML/special_offer.html
+++ b/HTML/special_offer.html
@@ -328,7 +328,7 @@
         <div class="footer-section">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="homepage.html"><i class="fa-solid fa-home"></i>Home</a></li>
+            <li><a href="../index.html"><i class="fa-solid fa-home"></i>Home</a></li>
             <li><a href="coffee_section.html"><i class="fa-solid fa-mug-saucer"></i>Coffee</a></li>
             <li><a href="brewng_equipment.html"><i class="fa-solid fa-gear"></i>Equipment</a></li>
             <li><a href="special_offer.html"><i class="fa-solid fa-tags"></i>Special Offers</a></li>
