--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
             Brew your perfect cup with precision. Explore our collection of high-quality coffee makers, grinders, and accessories designed for every coffee enthusiast.
           </p>
          <!-- <button>Shop Now<a href="brewng_equipment.html"></a></button>  -->
-         <button onclick="location.href='brewng_equipment.html'">Shop Now</button>
+         <button onclick="location.href='./HTML/brewng_equipment.html'">Shop Now</button>
         </div>
       </div>
-
       <div class="slide">
         <div class="slide-content">
           <h1>Welcome to our Coffee Shop</h1>
@@ -125,7 +124,7 @@
             Sourced directly from the finest coffee farms. Each bean is
             carefully selected for its unique flavor profile.
           </p>
-          <button onclick="location.href='coffee_section.html'">Explore More</button>
+          <button onclick="location.href='./HTML/coffee_section.html'">Explore More</button>
         </div>
       </div>
 
@@ -289,7 +288,7 @@
       <!-- Menu Section -->
       <div class="products-header">
         <h2>Our Signature Coffee</h2>
-        <a class="view-all" href="coffee_section.html">View All Coffee →</a>
+        <a class="view-all" href="./HTML/coffee_section.html">View All Coffee →</a>
       </div>
 
       <div class="products-grid">
@@ -312,7 +311,7 @@
           <!-- <p class="dis-price"><del>$49.99</del></p> -->
           <!-- <p class="price"> $39.99</p> -->
           <div class="button">
-            <a href="coffee_section.html#cappuccino">Shop Now</a>
+            <a href="./HTML/coffee_section.html#cappuccino">Shop Now</a>
           </div>
           <!-- <button class="btn">Shop Now</button> -->
         </div>
@@ -336,7 +335,7 @@
           <!-- <p class="dis-price"><del>$49.99</del></p> -->
           <!-- <p class="price">$39.99</p> -->
           <div class="button">
-            <a href="coffee_section.html#espresso">Shop Now</a>
+            <a href="./HTML/coffee_section.html#espresso">Shop Now</a>
           </div>
           <!-- <button class="btn">Shop Now</button> -->
         </div>
@@ -359,7 +358,7 @@
           <!-- <p class="dis-price"><del>$49.99</del></p> -->
           <!-- <p class="price">$39.99</p> -->
           <div class="button">
-            <a href="coffee_section.html#latte">Shop Now</a>
+            <a href="./HTML/coffee_section.html#latte">Shop Now</a>
           </div>
           <!-- <button class="btn">Shop Now</button> -->
         </div>
@@ -368,7 +367,7 @@
       <!-- Products Section -->
       <div class="products-header">
         <h2>Our Products</h2>
-        <a class="view-all" href="brewng_equipment.html"
+        <a class="view-all" href="./HTML/brewng_equipment.html"
           >View All Equipments →</a
         >
       </div>
@@ -384,7 +383,7 @@
           </p>
 
           <div class="button">
-            <a href="brewng_equipment.html#coffee_maker">Shop Now</a>
+            <a href="./HTML/brewng_equipment.html#coffee_maker">Shop Now</a>
           </div>
         </div>
 
@@ -397,7 +396,7 @@
             smooth taste with vibrant aroma—crafted for the perfect cup.
           </p>
           <div class="button">
-            <a href="coffee_section.html#coffee_beans">Shop Now</a>
+            <a href="./HTML/coffee_section.html#coffee_beans">Shop Now</a>
           </div>
         </div>
 
@@ -410,7 +409,7 @@
             perfect for fresh, flavorful coffee anytime, anywhere.
           </p>
           <div class="button">
-            <a href="brewng_equipment.html">Shop Now</a>
+            <a href="./HTML/brewng_equipment.html">Shop Now</a>
           </div>
         </div>
       </div>
@@ -615,25 +614,25 @@
           <h4>Quick Links</h4>
           <ul>
             <li>
-              <a href="homepage.html" class="active" aria-current="page"><i class="fa-solid fa-home"></i>Home</a>
+              <a href="index.html" class="active" aria-current="page"><i class="fa-solid fa-home"></i>Home</a>
             </li>
             <li>
-              <a href="coffee_section.html"
+              <a href="./HTML/coffee_section.html"
                 ><i class="fa-solid fa-mug-saucer"></i>Coffee</a
               >
             </li>
             <li>
-              <a href="brewng_equipment.html"
+              <a href="./HTML/brewng_equipment.html"
                 ><i class="fa-solid fa-gear"></i>Equipment</a
               >
             </li>
             <li>
-              <a href="special_offer.html"
+              <a href="./HTML/special_offer.html"
                 ><i class="fa-solid fa-tags"></i>Special Offers</a
               >
             </li>
             <li>
-              <a href="event.html"
+              <a href="./HTML/event.html"
                 ><i class="fa-solid fa-calendar-days"></i>Events</a
               >
             </li>
